--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-PORT=3000
-JENKINS_URL=http://localhost:8080
-JENKINS_JOB=Autodeployer
+PORT=5000
+JENKINS_BASE=http://localhost:8080
+JOB_NAME=Autodeployer
 JENKINS_USER=Koushik
 JENKINS_TOKEN=11d66bf38ac16251b8622f6ffbdb90d39c
+USE_TOKEN_TRIGGER=false
