--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
+# Server port
 PORT=5000
-JENKINS_BASE=http://localhost:8080
-JOB_NAME=Autodeployer
-JENKINS_USER=Koushik
-JENKINS_TOKEN=11d66bf38ac16251b8622f6ffbdb90d39c
+
+# Jenkins details
+JENKINS_URL=http://localhost:8080        # Base URL of your Jenkins server
+JENKINS_JOB=Autodeployer                 # Exact name of your Jenkins job
+JENKINS_USER=Koushik                     # Jenkins username
+JENKINS_TOKEN=11d66bf38ac16251b8622f6ffbdb90d39c  # Jenkins API token or password
+
+# Optional: Enable token-based triggering instead of CSRF crumb (set to "true" or "false")
 USE_TOKEN_TRIGGER=false
