--- a/.env
+++ b/.env
@@ -2,10 +2,11 @@
 PORT=5000
 
 # Jenkins details
-JENKINS_URL=http://localhost:8080        # Base URL of your Jenkins server
-JENKINS_JOB=Autodeployer                 # Exact name of your Jenkins job
-JENKINS_USER=Koushik                     # Jenkins username
-JENKINS_TOKEN=11d66bf38ac16251b8622f6ffbdb90d39c  # Jenkins API token or password
+JENKINS_URL=http://localhost:8080
+JENKINS_JOB=Autodeployer
+JENKINS_USER=Koushik
+JENKINS_TOKEN=11d66bf38ac16251b8622f6ffbdb90d39c
 
-# Optional: Enable token-based triggering instead of CSRF crumb (set to "true" or "false")
-USE_TOKEN_TRIGGER=false
+# Optional: Enable token-based triggering
+USE_TOKEN_TRIGGER=true
+
